@@ -284,7 +284,9 @@ module Hiki
       return h(Diff.new(src.split(/^/), dst.split(/^/)).ses.unidiff( '', context_lines ))
     end
 
-    def redirect(request, url, cookies = nil)
+    module_function :unified_diff
+
+    def redirect(cgi, url, cookies = nil)
       url.sub!(%r|/\./|, '/')
       header = {}
       header['cookie'] = cookies if cookies
